[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pybin"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "wheel",
  "pyyaml",
]

[dependency-groups]
dev = [
    "twine>3",
    "pytest",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
