[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pybin"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "wheel",
  "pyyaml",
]

[dependency-groups]
dev = [
    "mypy",
    "twine>3",
    "pytest",
    "ruff",
    "types-PyYAML",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pybin = ["py.typed"]

[[tool.mypy.overrides]]
module = "wheel.*"
ignore_missing_imports = true
